--- a/src/audio_recognition_cnn.ipynb
+++ b/src/audio_recognition_cnn.ipynb
@@ -392,6 +392,8 @@
     "    sess.run(tf.global_variables_initializer())\n",
     "    num_minibatches = int(m / minibatch_size) # number of minibatches of size minibatch_size in the train set\n",
     "    \n",
+    "    \n",
+    "    \n",
     "    # Do the training loop\n",
     "    for epoch in range(num_epochs):\n",
     "        minibatch_cost = 0.\n",
@@ -773,23 +775,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inference\n",
+    "\n",
+    "- Convert audio file to vector and reshape\n",
+    "- Do forward prop\n",
+    "- Find the maximal class\n",
+    "- Remap index to class name"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inference(audio_file, Z3):\n",
+    "    ra = load_wav_file(os.path.abspath(audio_file))\n",
+    "    x = ra.reshape(1, ra.shape[0], 1, 1)\n",
+    "    y_hat = tf.argmax(Z3, 1)\n",
+    "    prediction = sess.run(y_hat, feed_dict = {X: x})\n",
+    "    return classes[prediction[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(6473, 16000, 1, 1)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bed\n",
+      "down\n"
+     ]
     }
    ],
    "source": [
-    "X_test.shape"
+    "print(inference(\"../data/train/audio/bed/0a7c2a8d_nohash_0.wav\", Z3))\n",
+    "print(inference(\"../data/train/audio/down/0a7c2a8d_nohash_0.wav\", Z3))"
    ]
   },
   {
