--- a/src/audio_recognition_cnn.ipynb
+++ b/src/audio_recognition_cnn.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,32 +205,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def forward_propagation(X):\n",
+    "def forward_propagation(X, is_training=False):\n",
     "    \"\"\"\n",
     "    Implements the forward propagation for the model:\n",
     "    CONV2D -> RELU -> MAXPOOL -> CONV2D -> RELU -> MAXPOOL -> FLATTEN -> FULLYCONNECTED\n",
     "\n",
     "    Arguments:\n",
     "    X -- input dataset placeholder, of shape (input size, number of examples)\n",
-    "    parameters -- python dictionary containing parameters \"W1\", \"W2\"\n",
-    "    the shapes are given in initialize_parameters\n",
+    "    is_training -- applies drouput to prevent overfitting if true\n",
+    "    \n",
     "    Returns:\n",
     "    Z3 -- the output of the last LINEAR unit\n",
     "    \"\"\"\n",
     "\n",
-    "    # Retrieve the parameters from the dictionary \"parameters\"\n",
-    "#     W1 = parameters['W1']\n",
-    "#     W2 = parameters['W2']\n",
     "    regularizer1 = tf.contrib.layers.l2_regularizer(scale=0.001)\n",
     "    regularizer2 = tf.contrib.layers.l2_regularizer(scale=0.01)\n",
     "    regularizer3 = tf.contrib.layers.l2_regularizer(scale=0.1)\n",
     "    regularizer4 = tf.contrib.layers.l2_regularizer(scale=1.0)\n",
     "    regularizer5 = tf.contrib.layers.l2_regularizer(scale=10.0)\n",
-    "#     regularizer = None\n",
+    "    regularizer6 = None\n",
+    "    \n",
+    "    dropout = 0.5\n",
     "\n",
     "    Z1 = tf.layers.conv2d(X, 8, (4,1), strides = [1,1], padding = 'SAME', kernel_regularizer = regularizer2, name=\"z1\")\n",
     "    A1 = tf.nn.relu(Z1, name=\"a1\")\n",
@@ -240,6 +239,7 @@
     "    P2 = tf.nn.max_pool(A2, ksize = [1,4,1,1], strides = [1,4,1,1], padding = 'SAME', name=\"p2\")\n",
     "    P2 = tf.contrib.layers.flatten(P2)\n",
     "    Z3 = tf.contrib.layers.fully_connected(P2, 30, activation_fn=None, weights_regularizer = regularizer4)\n",
+    "    Z3 = tf.layers.dropout(Z3, rate=dropout, training=is_training)\n",
     "\n",
     "    return Z3"
    ]
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,13 +467,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def create_model(X_train, Y_train, learning_rate):\n",
+    "def create_model(X_train, Y_train, learning_rate, is_training = True):\n",
     "    \"\"\"\n",
     "    Implements a three-layer ConvNet in Tensorflow:\n",
     "    CONV2D -> RELU -> MAXPOOL -> CONV2D -> RELU -> MAXPOOL -> FLATTEN -> FULLYCONNECTED\n",
@@ -499,7 +499,7 @@
     "    n_y = Y_train.shape[1]\n",
     "\n",
     "    X, Y = create_placeholders(n_l, n_y)\n",
-    "    Z3 = forward_propagation(X)\n",
+    "    Z3 = forward_propagation(X, is_training)\n",
     "    cost = compute_cost(Z3, Y)\n",
     "    \n",
     "    # Backpropagation: Using AdamOptimizer to minimize the cost.\n",
@@ -519,7 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_model(X_train, Y_train, X_test, Y_test, X, Y, \n",
+    "def train(X_train, Y_train, X_test, Y_test, X, Y, \n",
     "              cost, optimizer, learning_rate = 0.011, minibatch_size = 64, num_epochs = 100, print_cost = True):\n",
     "    \n",
     "    seed = 3 # to keep results consistent (numpy seed)\n",
@@ -567,12 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "learning_rate = 0.001\n",
-    "Z3, X, Y, cost, optimizer = create_model(X_train, Y_train, learning_rate = learning_rate)"
+    "is_training = True\n",
+    "Z3, X, Y, cost, optimizer = create_model(X_train, Y_train, learning_rate = learning_rate, is_training = is_training)"
    ]
   },
   {
@@ -684,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,8 +694,10 @@
     "    fetched_timeline = timeline.Timeline(run_metadata.step_stats)\n",
     "    chrome_trace = fetched_timeline.generate_chrome_trace_format()\n",
     "    time_id = int(time())\n",
-    "    with open('../experiments/timeline_s_256b_120e_gpu0_l2_%s.json' % (time_id,), 'w') as f:\n",
-    "        f.write(chrome_trace)"
+    "    with open('../experiments/timeline_l2_10_300e_256b_l2-reg-0.01_alpha-0.001_%s.json' % (time_id,), 'w') as f:\n",
+    "        f.write(chrome_trace)\n",
+    "\n",
+    "# save_profiling_data()"
    ]
   },
   {
@@ -802,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -825,14 +828,16 @@
      "text": [
       "bed\n",
       "down\n",
-      "down\n"
+      "down\n",
+      "three\n"
      ]
     }
    ],
    "source": [
     "print(inference(\"../data/train/audio/bed/0a7c2a8d_nohash_0.wav\", Z3)) # bed\n",
     "print(inference(\"../data/train/audio/down/0a7c2a8d_nohash_0.wav\", Z3)) # down\n",
-    "print(inference(\"../data/test/audio/clip_0000adecb.wav\", Z3)) # happy"
+    "print(inference(\"../data/test/audio/clip_0000adecb.wav\", Z3)) # happy\n",
+    "print(inference(\"../data/test/audio/clip_000373a5b.wav\", Z3)) # go"
    ]
   },
   {
@@ -846,14 +851,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ../saved_models/l2_10_300e_256b_lambda1-0.01_lambda2-0.1_lambda3-1_alpha-0.001/l2_10_300e_256b_l2-reg-0.01_alpha-0.001.ckpt\n"
+     ]
+    }
+   ],
    "source": [
     "# Create Model, start session and then reload the variables\n",
     "\n",
-    "# saver = tf.train.Saver() # create a saver for saving variables to disk\n",
-    "# saver.restore(sess, \"../saved_models/trained_model.ckpt\")"
+    "saver = tf.train.Saver() # create a saver for saving variables to disk\n",
+    "saver.restore(sess, \"../saved_models/l2_10_300e_256b_lambda1-0.01_lambda2-0.1_lambda3-1_alpha-0.001/l2_10_300e_256b_l2-reg-0.01_alpha-0.001.ckpt\")"
    ]
   },
   {
